# nessi

./: README.md  pyproject.toml
examples/: hello_world.py
src/nessi/: array_type.py  context.py  diagram_generator.py  expressions.py  interpolated_string.py  interpreter.py  main.py  named_memory.py  program.py  statement_visitor.py  statements.py  value.py
