[project]
name = "nessi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nassi-shneiderman-generator",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nassi-shneiderman-generator = { git = "https://github.com/mgerhold/nassi-shneiderman-generator.git" }

[dependency-groups]
dev = [
    "pyrefly>=0.25.1",
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint]
select = ["I", "F", "E", "W"]
